Fix broken links in doc and READMEs

--- a/data/raw/eminence/math/bourbaki/README
+++ b/data/raw/eminence/math/bourbaki/README
@@ -7,4 +7,4 @@ Ed. Springer
 
 Uses the "INDEX DES NOMS CITÉS", pp 366 - 376 of the book
 
-To check this file, see https://g5.tig12.net/auxiliary/eminence/math/bourbaki
+Original document used to build this file: see https://github.com/tig12/g5-aux/tree/main/eminence/math/bourbaki
