--- a/data/raw/eminence/math/dieudonne/README
+++ b/data/raw/eminence/math/dieudonne/README
@@ -7,4 +7,4 @@ Ed. Hermann
 
 Uses the "Index historique", pp 495 - 512 of the book
 
-To check this file, see https://g5.tig12.net/auxiliary/eminence/math/dieudonne
+Original document used to build this file: see https://github.com/tig12/g5-aux/tree/main/eminence/math/dieudonne
