--- a/data/raw/eminence/math/escofier/README
+++ b/data/raw/eminence/math/escofier/README
@@ -8,7 +8,7 @@ Collection Les topos
 
 Uses the index, pp 125 - 128 of the book
 
-To check this file, see https://g5.tig12.net/auxiliary/eminence/math/escofier
+Original document used to build this file: see https://github.com/tig12/g5-aux/tree/main/eminence/math/escofier
 
 Compared with the original data, some lines (doublons) were removed :
 
