--- a/data/raw/eminence/math/peiffer-dahan-dalmenico/README
+++ b/data/raw/eminence/math/peiffer-dahan-dalmenico/README
@@ -8,7 +8,7 @@ Editions du Seuil, 1986
 
 Uses "Index des noms propres", p 307-309 of the book
 
-To check this file, see https://g5.tig12.net/auxiliary/eminence/math/peiffer-dahan-dalmenico
+Original document used to build this file: see https://github.com/tig12/g5-aux/tree/main/eminence/math/peiffer-dahan-dalmenico
 
 Compared with the original data, some modifications were done :
 
