--- a/data/raw/eminence/math/irem/README
+++ b/data/raw/eminence/math/irem/README
@@ -9,7 +9,7 @@ Collection : IREM - Epistémologie et Histoire des Maths
 
 Uses the "Index des noms", pp 415 - 419 of the book
 
-To check this file, see https://g5.tig12.net/auxiliary/eminence/math/irem
+Original document used to build this file: see https://github.com/tig12/g5-aux/tree/main/eminence/math/irem
 
 Compared with the original data, some lines were modified :
 
