--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 
 
+
+- Harmonize voc Group::createFromSlug() and Person:getFromSlug()
+
 Handle duplicates
 2 d-aragona-ludovico (A5-1640) 1876-05-23 02:10:04 CERNUSCO SUL NA
 2 gauquelin-a6-1496 (A6-1496) 1876-05-23 02:10:04 CERNUSCO SUL NA
