--- a/data/raw/cfepp/README
+++ b/data/raw/cfepp/README
@@ -1,7 +1,7 @@
 
 File final3 was sent by Jan Willem Nienhuys, 2022-03-07
 
-Meaning of fields are documented on https://tig12.github.io/gauquelin5/cfepp.html
+Meaning of fields are documented on https://tig12.github.io/g5/cfepp.html
 
 Note that following the date there is a column with a letter, indicating
 which 'time regime' applies: f for France, o for 'occupied zone during WWI'
