--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
 Fix addOccu to avoid duplicates:
 beltoise-jean-pierre-1937-04-26	E3-95		ES-332			CF-144	3	motor-sports-competitor+motor-sports-competitor
 
+baumer-gertrud-1873-09-12 => ü is uppercased
 
 Handle duplicates
 2 d-aragona-ludovico (A5-1640) 1876-05-23 02:10:04 CERNUSCO SUL NA
