--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 
 - Harmonize voc Group::createFromSlug() and Person:getFromSlug()
 
+- D6 => reintegrate correctly addGeo + add DATE-UT computation + write corresponding issues
+
 Fix addOccu to avoid duplicates:
 beltoise-jean-pierre-1937-04-26	E3-95		ES-332			CF-144	3	motor-sports-competitor+motor-sports-competitor
 
