--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 
+- case of Boccardo Jean 1942-03-06 : date updated to 1942-03-16 and slug not updated
+=> check ALL tmp2db and change slugs when not done
+
 - Harmonize voc Group::createFromSlug() and Person:getFromSlug()
 
 - D6 => reintegrate correctly addGeo + add DATE-UT computation + write corresponding issues
