Fix broken link in README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 
-See https://tig12.github.io/gauquelin5
+See https://tig12.github.io/g5
 
 or clone the repository on your local machine and browse docs/index.html
