Continue wiki system

--- a/src/commands/wiki/person/README
+++ b/src/commands/wiki/person/README
@@ -1,2 +1,5 @@
 
+WARNING - THIS CODE IS NOT YET OPERATIONAL
+
 Commands in this directory permit to add a person not related to an official document.
+Information stored in a person.yml file
