BCK - g55 export under development

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 
+- check that brown-sequard-edouard-1817-04-17 country = MU
+
 - crespin-regine-1927-02-23 : occus is both opera singer and singer - should be only opera singer
 
 - case of Boccardo Jean 1942-03-06 : date updated to 1942-03-16 and slug not updated
