--- a/src/commands/gauq/all/README
+++ b/src/commands/gauq/all/README
@@ -1,5 +1,5 @@
-Code operating on all cura files
+Code operating on all Gauquelin files
 
-To add a new command available for all cura files :
+To add a new command available for all Gauquelin files :
 - Add the command in GauqRouter::getArgs3()
 - Handle the command in GauqCommand::execute()
