--- a/data/db/init/geonames/README
+++ b/data/db/init/geonames/README
@@ -1,4 +1,2 @@
 
-This directory is bound to be removed.
-Contains results of calls to geonames web service used by step computeGeo on cura D6.
-This step doesn't work correctly and the file D6.csv is only used to restore country code.
+This directory contains results of calls to geonames web service used by step computeGeo on cura D6.
