--- a/data/db/init/README
+++ b/data/db/init/README
@@ -10,4 +10,4 @@ Directories containing tweak files are not completely coherent, they reflect the
 - tweaks/ contains corrections applied to the database and use its vocabulary.
   See comments of class src/commands/db/init/tweaks for explanations about the format.
 
-- g55-edited/ and lerrcp-marked/ contain data related to obsolete code and are not used anymore.
+- g55-edited/ and lerrcp-marked/ contain data related to first 1955 restoration, not used anymore.
