Start replacement of empty values by null in csv fields

--- a/data/raw/gauq/g55/README
+++ b/data/raw/gauq/g55/README
@@ -1,6 +1,8 @@
 
 Contains lists published in "L'influence des astres, étude critique et expérimentale", by Michel Gauquelin, 1955, Editions du Dauphin.
 
+See description of the groups on https://tig12.github.io/g5/g55.html
+
 
 These lists were built from scans of the paper book.
 These scans can be downloaded from
