--- a/src/commands/enrich/deathfr/README
+++ b/src/commands/enrich/deathfr/README
@@ -9,7 +9,7 @@ Raw data are stored in .bz2 files in data/tmp/enrich/death-fr/raw
 From 1970 to 2025: contains 28 755 067 persons.
 
 Process:
-- retrieve data from data.gouv.fr site and compress them
+- retrieve data from data.gouv.fr site and compress them in bz2
 - execute php run-g5.php enrich deathfr raw2sqlite to generate the local sqlite database
 - execute php run-g5.php enrich deathfr sqlite2csv to build csv files containing a list of matches in data/tmp/enrich/death-fr/check
 - edit death-fr-check.csv to mark the files that don't match
